Specials Details alignment fix

--- a/_sass/_room-details.scss
+++ b/_sass/_room-details.scss
@@ -154,7 +154,7 @@
 			}
 		.details-intro{ 
 				&.style2{
-					text-align:center; padding:30px 13% 60px; position:relative;
+					text-align:center; padding:30px 8% 60px; position:relative;
 					.holds{max-width:80%; margin:0 auto;
 						@media (max-width: 767px){
 							 max-width:90%;
@@ -198,7 +198,7 @@
 				font-family: 'brandon_grotesquelight';
 				font-size: 18px;
 				line-height: 24px;
-				padding:0 20% 10px;
+				padding:0 16% 10px;
 				text-align:left;
 				@media (max-width: 768px){
 					 padding:0 20px 10px;
